# younhapia

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  manage.py  pyproject.toml
.github/workflows/: build-younhapia.yml  test-younhapia.yml
kkappu/: admin_urls.py  apps.py  models.py
kkappu/migrations/: 0001_initial.py  0002_kkappuimage_description_and_more.py
kkappu/tests/: test_admin.py
yholics/: apps.py  authentication.py  decorators.py  tests.py  views.py
yholics/migrations/: 0001_initial.py
yholics/tests/: hosts.py  test_login.py  test_session.py  urls.py
yholics/usersessions/: admin.py  apps.py  middleware.py  models.py  utils.py
yholics/usersessions/backends/: db.py
yholics/usersessions/migrations/: 0001_initial.py
younhapia/: admin.py  apps.py  asgi.py  hosts.py  middleware.py  urls.py  wsgi.py
younhapia/settings/: common.py  dev.py  prod.py  test.py
younhapia/templates/account/: login.html
younhapia/tests/: test_static.py
younhapia/urls/: admin.py  dev.py  www.py
