[tool.poetry]
package-mode = false
name = "younhapia"
version = "0.1.0"
description = "The API backend server for DevHolics projects"
authors = ["Riever <riever.holic@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg = {extras = ["c"], version = "^3.1.19"}
django-allauth = {extras = ["socialaccount"], version = "^0.63.3"}
django-storages = {extras = ["google"], version = "^1.14.3"}
django-hosts = "^6.0"
wagtail = "^6.1.2"
whitenoise = "^6.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8-bugbear = "^24.4.26"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_django = ["django", "rest_framework"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "younhapia.settings.test"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
