[project]
name = "younhapia"
version = "0.1.0"
description = "The YounhaLibrary backend server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-allauth[socialaccount]>=65.4.1",
    "django-hosts>=6.0",
    "django-storages[google]>=1.14.5",
    "djangorestframework>=3.15.2",
    "wagtail>=6.4.1",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "psycopg[binary]>=3.2.5",
]
test = [
    "pytest-django>=4.10.0",
]
prod = [
    "psycopg[c]>=3.2.5",
    "gunicorn>=23.0.0",
]

[tool.uv]
conflicts = [
    [
        { group = "dev" },
        { group = "prod" },
    ]
]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "younhapia.settings.test"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
